--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <!-- Load TensorFlow.js -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.12.5"> </script>
     <!--p5.js-->
-    <script language="javascript" type="text/javascript" src="p5.min.js"></script>
-    <!--script language="javascript" type="text/javascript" src="../../p5.dom.min.js"></script-->
+    <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <!-- this line removes any default padding and style. you might only need one of these values set. -->
